# videocall-rs

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-plz.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURABLE_SLOTS_UPDATE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.actix  Dockerfile.dioxus  Dockerfile.meeting-api  Dockerfile.ui  Dockerfile.video-daemon  Dockerfile.videocall-cli  Dockerfile.yew  GLOBAL_DEPLOYMENT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MACOS_APPLE_SILICON_INSTALLATION_GUIDE.md  MIGRATION_STATUS.md  Makefile  PERFORMANCE.md  README.md  Rename-bug-fix.md  SLOT_BASED_DEPLOYMENT_CHANGES.md  TEST_BUILD_IMAGES.md  Wednesday-TP-Meeting-Analysis.md  config.toml  cut_build_push_backend.sh  cut_build_push_meeting_api.sh  cut_build_push_ui.sh  cut_build_push_video_daemon.sh  cut_build_push_videocall_cli.sh  (+20 more)
actix-api/: CHANGELOG.md  Cargo.toml  TESTING.md  build.rs  startup.sh
actix-api/certs/: localhost.cert-sha256.txt  localhost.der  localhost.key  localhost.pem  localhost_key.der
actix-api/docs/: DESIGN-webtransport-actor-consolidation.md
actix-api/migrations/: 20250101000000_create_meetings_table.sql
actix-api/src/: client_diagnostics.rs  connection_tracker.rs  constants.rs  db_pool.rs  diagnostics.rs  lib.rs  lobby.rs  main.rs  meeting.rs  meeting_api.rs  metrics.rs  server_diagnostics.rs  session_manager.rs  test_utils.rs  token_validator.rs  version.rs
actix-api/tests/: chat_server_reliability_tests.rs  chat_server_tests.rs  jwt_integration_tests.rs  layer_hint_delivery_tests.rs  packet_handler_tests.rs  session_logic_tests.rs  session_manager_tests.rs  token_validator_tests.rs  waiting_room_isolation_tests.rs  waiting_room_isolation_wt_tests.rs  webtransport_tests.rs  ws_chat_session_tests.rs
bot/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  VALIDATION.md  config-ascend-WS.yaml  config-ascend-WT.yaml  config.yaml  config.yaml.template  generate-conversation-edge.py  generate-conversation.py
bot/src/: aq_controller.rs  audio_producer.rs  config.rs  costume_renderer.rs  diagnostics_reporter.rs  ekg_renderer.rs  health_reporter.rs  i420_scale.rs  inbound_stats.rs  keyframe_requester.rs  layer_preference_sender.rs  lib.rs  main.rs  metrics_server.rs  netsim.rs  netsim_profiles.rs  rtt_probe.rs  token.rs  transport.rs  video_encoder.rs  video_producer.rs  viewport_sender.rs  websocket_client.rs  webtransport_client.rs
bot/tests/: aq_degradation.rs
dioxus-ui/: CHANGELOG.md  Cargo.toml  README.md  TESTING.md  Trunk.toml  assets  build.rs  index.html  scripts  static  webdriver.json
dioxus-ui/docs/: styling-tokens.md
dioxus-ui/scripts/: config.js  config.local.js.example  console-log-collector.js  encoderWorker.min.js  recording.js
dioxus-ui/src/: auth.rs  console_log_collector.rs  constants.rs  context.rs  id_token.rs  lib.rs  local_storage.rs  main.rs  meeting_api.rs  pkce.rs  provider_config.rs  routing.rs  theme.rs  theme_file.rs  types.rs
dioxus-ui/static/: global.css  leptos-style.css  style.css  tailwind.css  tokens-v0.json
dioxus-ui/tests/: context_unit.rs  device_integration.rs  device_selector.rs  home_integration.rs  login_provider_logo.rs  meeting_ended_overlay.rs  meetings_list_owner_gating.rs  record_button_state.rs  screen_share_detach.rs  screen_share_state.rs  speaking_indicators.rs  video_control_buttons.rs
leptos-ui/: Cargo.toml  README.md
leptos-ui/src/: app.rs  constants.rs  context.rs  lib.rs  main.rs
leptos-website/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build_and_push_docker.sh  flake.nix  fly.toml  input.css  package-lock.json  package.json  rust-toolchain.toml  start.sh  start_docker.sh  tailwind.config.js
leptos-website/public/: robots.txt  sitemap.xml
leptos-website/src/: app.css  app.rs  components.rs  error_template.rs  errors.rs  fallback.rs  global.css  lib.rs  main.rs  pages.rs
leptos-website/style/: output.css
matomo-logger/: Cargo.toml  README.md
matomo-logger/src/: lib.rs
meeting-api/: Cargo.toml
meeting-api/src/: auth.rs  config.rs  console_log_purge.rs  cors.rs  error.rs  feed_events.rs  lib.rs  main.rs  nats_consumers.rs  nats_events.rs  oauth.rs  search.rs  search_push.rs  state.rs  token.rs
meeting-api/tests/: activate_semantics_tests.rs  ad_hoc_join_tests.rs  auth_tests.rs  chat_token_tests.rs  (+27 more)
neteq/: BUFFERING_ISSUE_ANALYSIS.md  CHANGELOG.md  Cargo.toml  DASHBOARD_README.md  README.md  dashboard.html  neteq_stats.jsonl
vcprobe/: Cargo.toml  README.md  test_nats.sh
video-daemon/: Cargo.toml  README.md  check_versions.sh  install-raspy.sh  start_cameras.sh
videocall-aq/: Cargo.toml
videocall-bench/: Cargo.toml  build.rs
videocall-cli/: CHANGELOG.md  Cargo.toml  README.md  build-raspy.sh  check_versions.sh  release-plz.toml
videocall-client/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  REVOLUTIONARY_AUDIO_ARCHITECTURE.md  rust-toolchain.toml  start_chrome.sh
videocall-codecs/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README-ios.md  README.md  add_license.sh  build_ios.sh  uniffi-bindgen.rs  videocall-rs.code-workspace
videocall-daemon/: Cargo.toml  README.md  check_versions.sh  install-raspy.sh  rust-toolchain.toml
videocall-diagnostics/: CHANGELOG.md  Cargo.toml  README.md
videocall-flatbuffers/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
videocall-ios/: Cargo.toml  build_ios.sh
videocall-meeting-client/: CHANGELOG.md  Cargo.toml  README.md
videocall-meeting-types/: CHANGELOG.md  Cargo.toml  README.md
videocall-neteq/: Cargo.toml  README.md
videocall-netsim/: Cargo.toml
videocall-sdk/: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_android.sh  build_ios.sh
videocall-transport/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
videocall-types/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
webtransport-cli/: Cargo.toml
yew-ui/: .gitignore  CHANGELOG.md  Cargo.toml  TESTING.md  Trunk.toml  index.html  rust-toolchain.toml  style.css  tailwind.config.js
(+1914 files in other folders)
