[workspace]
resolver = "2"
members = [
    "actix-api",
    "bot",
    "videocall-types",
    "videocall-client",
    "videocall-cli",
    "yew-ui",
    "videocall-uniffi",
]
exclude = [
    "src-tauri",
    "leptos-website",
    "videocall-cli/nokhwa", 
    "videocall-cli/nokhwa/nokhwa-bindings-macos", 
    "videocall-cli/nokhwa/nokhwa-bindings-windows", 
    "videocall-cli/nokhwa/nokhwa-bindings-linux", 
    "videocall-cli/nokhwa/nokhwa-core"
]

