[workspace]
members = [
    "actix-api",
    "bot",
    "leptos-ui",
    "matomo-logger",
    "neteq",
    "videocall-cli",
    "videocall-client",
    "videocall-codecs",
    "videocall-diagnostics",
    "videocall-sdk",
    "videocall-types",
    "yew-ui",
]
exclude = [
    "src-tauri",
    "leptos-website",
    "videocall-cli/nokhwa",
    "videocall-cli/nokhwa/nokhwa-bindings-macos",
    "videocall-cli/nokhwa/nokhwa-bindings-windows",
    "videocall-cli/nokhwa/nokhwa-bindings-linux",
    "videocall-cli/nokhwa/nokhwa-core",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
wasm-bindgen = "0.2.95"
web-transport-proto = "0.2.7"
web-transport-quinn = "0.8.1"

[workspace.dependencies.env-libvpx-sys]
version = "5.1.3"
features = ["generate"]

[workspace.dependencies.wasm-bindgen-futures]
version = "0.4.30"
