[workspace]
resolver = "2"
members = [
    "actix-api",
    "meeting-api",
    "bot",
    "videocall-types",
    "videocall-meeting-types",
    "videocall-meeting-client",
    "videocall-client",
    "videocall-cli",
    "yew-ui",
    "dioxus-ui",
    "videocall-sdk",
    "videocall-codecs",
    "neteq",
    "videocall-diagnostics",
    "videocall-transport",
    "matomo-logger"
]

exclude = [
    "src-tauri",
    "leptos-website",
    "videocall-cli/nokhwa",
    "videocall-cli/nokhwa/nokhwa-bindings-macos",
    "videocall-cli/nokhwa/nokhwa-bindings-windows",
    "videocall-cli/nokhwa/nokhwa-bindings-linux",
    "videocall-cli/nokhwa/nokhwa-core"
]

[workspace.dependencies]
env-libvpx-sys = { version = "5.1.3", features = ["generate"] }
anyhow = "1.0.75"
wasm-bindgen-futures = { version = "0.4.30" }
wasm-bindgen = "0.2.108"
web-transport-quinn = "0.8.1"
