[package]
name = "sec-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "sec_api"
path = "src/lib.rs"

[[bin]]
name = "webtransport_server"
path = "src/bin/webtransport_server.rs"

[[bin]]
name = "websocket_server"
path = "src/bin/websocket_server.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.2.2"
actix-rt = "2.8.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
anyhow = "1.0.60"
base64 = "0.13.0"
bytes = "1.4.0"
bytestring = "1.1.0"
derive_more = "0.99.11"
futures = "0.3.26"
http = "0.2.9"
jsonwebtoken= "8.1.1"
nats = "0.24.0"
oauth2 = { version = "4" }
octets = "0.2.0"
protobuf = "3.2.0"
quinn = { version = "0.10.1", features = ["runtime-tokio", "tls-rustls", "ring"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.11", features = ["json"]}
rustls = { version = "0.21.2", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
sec-http3 = "0.1.1"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
tracing-tree = "0.2.3"
types = { path= "../types"}
uuid = { version = "0.8", features = ["serde", "v4"] }
