[package]
name = "videocall-api"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A secure API for the videocall project"
keywords = ["webtransport", "quic", "webrtc", "videocall", "http3"]
categories = ["network-programming", "multimedia"]

[features]
default = []
diagnostics = ["prometheus", "lazy_static"]

[lib]
name = "sec_api"
path = "src/lib.rs"

[[bin]]
name = "webtransport_server"
path = "src/bin/webtransport_server.rs"

[[bin]]
name = "websocket_server"
path = "src/bin/websocket_server.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.2.2"
actix-rt = "2.8.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
anyhow = { workspace = true }
async-nats = "0.42.0"
base64 = "0.13.0"
bytes = "1.4.0"
futures = "0.3.26"
lazy_static = { version = "1.4.0", optional = true }
oauth2 = { version = "4" }
prometheus = { version = "0.13", optional = true }
quinn = { version = "0.11.2", features = ["runtime-tokio", "ring"] }
protobuf = "3.3.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
regex = "1.9.5"
reqwest = { version = "0.11.11", features = ["json"]}
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
videocall-types = { path= "../videocall-types", version = "2.0.0" }
urlencoding = "2.1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
web-transport-quinn = "0.3.1"
