[package]
name = "videocall-api"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A secure API for the videocall project"
keywords = ["webtransport", "quic", "webrtc", "videocall", "http3"]
categories = ["network-programming", "multimedia"]

[package.metadata.cargo-machete]
ignored = ["postgres-types"]

[features]
default = []

[lib]
name = "sec_api"
path = "src/lib.rs"

[[bin]]
name = "webtransport_server"
path = "src/bin/webtransport_server.rs"

[[bin]]
name = "websocket_server"
path = "src/bin/websocket_server.rs"

[[bin]]
name = "metrics_server"
path = "src/bin/metrics_server.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.2.2"
actix-rt = "2.8.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
anyhow = { workspace = true }
async-nats = "0.42.0"
base64 = "0.13.0"
bytes = "1.4.0"
futures = "0.3.26"
jsonwebtoken = "9"
lazy_static = { version = "1.4.0" }
oauth2 = { version = "4" }
prometheus = { version = "0.13" }
protobuf = "3.3.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
regex = "1.9.5"
reqwest = { version = "0.11.11", features = ["json"]}
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
videocall-meeting-types = { path = "../videocall-meeting-types", version = "0.1.1" }
videocall-types = { path= "../videocall-types", version = "4.0.0" }
urlencoding = "2.1.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
web-transport-quinn = { workspace = true }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
postgres-types = { version = "0.2.11", features = ["with-chrono-0_4"] }
argon2 = "0.5"
rand = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }

[dev-dependencies]
chrono = "0.4"
url = "2"
serial_test = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
videocall-types = { path = "../videocall-types", version = "4.0.0", features = ["testing"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
meeting-api = { path = "../meeting-api" }

