[package]
name = "bot"
version = "0.1.0"
edition = "2018"
release = false
license = "MIT OR Apache-2.0"
description = "A bot for the videocall project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "zoom", "webrtc"]
categories = ["network-programming", "multimedia"]

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
serde = "1.0.130"
serde_json = "1.0.72"
rand = "0.8.5"
futures = "0.3.16"
videocall-types = { path= "../videocall-types", version = "0.2.0" }
protobuf = "3.3.0"
chrono = "0.4.25"
dotenv = "0.15.0"

[dependencies.url]
version = "2.3.1"
