[package]
name = "bot"
version = "1.0.10"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A bot for the videocall project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "zoom", "webrtc"]
categories = ["network-programming", "multimedia"]

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
# Remove WebSocket, add WebTransport
web-transport-quinn = { workspace = true }
futures = "0.3.16"
videocall-types = { path= "../videocall-types", version = "3.0.1" }
protobuf = "3.3.0"
chrono = "0.4.25"
dotenv = "0.15.0"
url = "2.3.1"

# Audio processing (from neteq_player.rs pattern)
hound = "3.5"  # WAV file reading
opus = "0.3.0"  # Opus encoding

# Video processing (exact same as videocall-cli)
image = "0.25.5"  # JPEG processing
env-libvpx-sys = { version = "5.1.3", features = ["generate"] }  # VP9 encoding (exact same as videocall-cli)

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
