[package]
name = "bot"
version = "1.1.3"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A bot for the videocall project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
authors = [
    "Dario Lencina <dario@securityunion.dev>",
]
keywords = ["quic", "webtransport", "zoom", "webrtc"]
categories = ["network-programming", "multimedia"]

[features]
default = []
# Enable the Prometheus metrics HTTP endpoint (`--metrics-port`). When this
# feature is off, all metric-update call sites compile away: the metrics
# struct is gated behind `#[cfg(feature = "metrics")]` and is referenced
# through a feature-gated type alias, so there is no runtime cost for bots
# that don't opt in.
metrics = ["dep:prometheus", "dep:hyper"]

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.16"
videocall-types = { path= "../videocall-types", version = "5.0.0" }
videocall-aq = { path = "../videocall-aq", version = "0.1.0" }
protobuf = "3.3.0"
chrono = "0.4.25"
dotenv = "0.15.0"
url = "2.3.1"

# Transports
web-transport-quinn = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# JWT authentication
jsonwebtoken = "9"

# Audio processing (from neteq_player.rs pattern)
hound = "3.5"  # WAV file reading
opus = "0.3.0"  # Opus encoding

# Video processing (exact same as videocall-cli)
image = "0.25.5"  # JPEG processing
env-libvpx-sys = { version = "5.1.3", features = ["generate"] }  # VP9 encoding (exact same as videocall-cli)
memmap2 = "0.9"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-log = "0.2"

# Error handling
anyhow = "1.0"

# Deterministic RNG for the network-impairment shim. 0.8 is chosen to match
# other direct consumers in the workspace and to keep the `StdRng` / `SeedableRng`
# API stable; upgrading to 0.9 would flip several item names.
rand = "0.8"

# Prometheus metrics (feature-gated; see `[features]`). Kept pinned to the same
# 0.13 line actix-api uses so a single Prometheus version is used across the
# workspace.
prometheus = { version = "0.13", optional = true }
# Minimal hyper server for the `/metrics` endpoint. Feature-gated.
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional = true }
