[package]
name = "leptos_website"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Website for the videocall.rs project"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
keywords = ["leptos", "videocall", "webrtc", "webtransport", "quic"]
categories = ["web-programming", "multimedia"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cached = { version = "0.43", optional = true }
console_error_panic_hook = "0.1.7"
cfg-if = "1.0.0"
leptos = { git = "https://github.com/leptos-rs/leptos", features = [
	"nightly",
	"experimental-islands",
] }
leptos_axum = { git = "https://github.com/leptos-rs/leptos", optional = true, features = [
	"experimental-islands",
] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", features = [
	"nightly",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", features = [
	"nightly",
] }
log = "0.4.17"
simple_logger = "4.0.0"
axum = { version = "0.6.1", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4", features = [
	"compression-gzip",
	"fs",
	"trace",
], optional = true }
tokio = { version = "1.22.0", features = ["full"], optional = true }
http = { version = "0.2.8" }
sqlx = { version = "0.6.2", features = [
	"runtime-tokio-rustls",
	"sqlite",
], optional = true }
thiserror = "1.0.38"
wasm-bindgen = "0.2.85"
femark = { version = "=0.1.3", optional = true }
axum-extra = { version = "0.7.4", optional = true, features = ["cookie"] }
web-sys = { version = "0.3", optional = true, features = [
	"HtmlDocument",
	"MediaQueryList",
] }
serde = "1.0.218"

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"dep:web-sys",
]
ssr = [
	"dep:axum",
	"dep:tower",
	"dep:tower-http",
	"dep:tokio",
	"dep:sqlx",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"dep:leptos_axum",
	"dep:femark",
	"dep:cached",
	"dep:axum-extra",
]

[package.metadata.cargo-all-features]
denylist = [
	"axum",
	"tower",
	"tower-http",
	"tokio",
	"sqlx",
	"leptos_axum",
	"femark",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos_website"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
