[package]
name = "matomo-logger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Global logger that forwards Rust log records to console and Matomo (_paq) with browser/worker support"
authors = ["Dario Lencina <dario@securityunion.dev>"]
readme = "README.md"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
keywords = ["matomo", "analytics", "logger", "wasm", "yew"]
categories = ["web-programming", "development-tools::debugging", "wasm"]
include = ["src/**/*", "README.md"]

[features]
default = ["browser"]
browser = []
worker = []
http = []

[dependencies]
log = "0.4"
once_cell = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "console", "DedicatedWorkerGlobalScope"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = false }
wasm-bindgen = { version = "0.2", optional = false }
web-sys = { version = "0.3", optional = false, features = [
    "Window",
    "console",
    "Document",
    "HtmlHeadElement",
    "Element",
] }

