[package]
name = "neteq"
version = "0.1.1"
edition = "2021"
description = "NetEQ-inspired adaptive jitter buffer for audio decoding"
license = "MIT OR Apache-2.0"
authors = ["Dario Lencina <dario@securityunion.dev>"]
readme = "README.md"
homepage = "https://github.com/security-union/videocall-rs"
repository = "https://github.com/security-union/videocall-rs"
keywords = ["audio", "jitter", "webrtc", "neteq", "buffer"]
categories = ["multimedia::audio", "multimedia::encoding", "algorithms", "data-structures"]
include = ["src/**/*"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["DedicatedWorkerGlobalScope", "MessageEvent", "console"] }
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"
ringbuf = "0.3"
hound = { version = "3.5", optional = true }
rand = { version = "0.9.1", optional = true, default-features = false }
cpal = { version = "0.15", optional = true }
opus = { version = "0.3", default-features = false, optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
web-time = "1.1.0"


[features]
default = []
audio_files = ["hound"]
web = ["wasm-bindgen", "serde-wasm-bindgen", "serde_bytes", "js-sys", "web-sys", "console_error_panic_hook"]
audio_out = ["cpal", "clap", "opus"]

[dev-dependencies]
env_logger = "0.10"
hound = "3.5"


